force-app/main/default/objects/Target__c/fields/Number_of_reps_you_want__c.field-meta.xml
<CustomField>
    <fullName>Number_of_reps_you_want__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of reps you want</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>