force-app/main/default/objects/Target__c/fields/Parent_Target__c.field-meta.xml
<CustomField>
    <fullName>Parent_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Smaller Steps</relationshipLabel>
    <relationshipName>Smaller_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>