force-app/main/default/objects/Target__c/validationRules/Number_reps_you_want_shouldnt_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_reps_you_want_shouldnt_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>IF (ISNEW(),  false , ISCHANGED(Number_of_reps_you_want__c))</errorConditionFormula>
    <errorDisplayField>Number_of_reps_you_want__c</errorDisplayField>
    <errorMessage>You can change this field only when create a target. If you created wrong target. Then delete this and create another.</errorMessage>
</ValidationRule>