force-app/main/default/objects/Target__c/listViews/Targets_for_Today.listView-meta.xml
<ListView>
    <fullName>Targets_for_Today</fullName>
    <columns>NAME</columns>
    <columns>Number_of_reps_you_did__c</columns>
    <columns>Number_of_reps_you_want__c</columns>
    <columns>isCompleted__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Targets for Today</label>
</ListView>